--- a/data/assets/index.css
+++ b/data/assets/index.css
@@ -17,7 +17,59 @@ div.debug { /* remove debug to enable */
 .content {
     overflow: auto;
     height: 100vh;
+    width: 100vw;
+    padding: 20px;
 }
+
+#chart {
+    border-radius: 12px;
+    background: #004880;
+    padding: 12px; 
+}
+
+#card {
+    border-radius: 12px;
+    background: #252728;
+    padding: 0px; 
+}
+
+#cardContent {
+    padding: 16px; 
+}
+
+h1  {
+    color:#e3e2e6;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    font-family: "Lato", sans-serif;
+    font-weight: 100;
+}
+
+p  {
+    color:#c3c6cf;
+    font-family: "Lato", sans-serif;
+    font-size: 14px;
+    font-weight: 300;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#cardButton {
+    text-decoration: none;
+    width: fit-content;
+    border-radius: 24px;
+    background: #00325b;
+    margin-top: 24px;
+    padding: 12px 24px 12px 24px;
+    font-weight: 100;
+    font-size: 16px;
+    color:#e3e2e6;
+    text-align: center;
+    
+}
+
+
+
 
 .content>p {
     color: beige;
@@ -52,7 +104,7 @@ div.debug { /* remove debug to enable */
 }
 
 .sideBar>a>.item>.label {
-    font-weight: 600;
+    font-weight: 300;
     font-size: 12px;
     color: #818181;
     text-align: center;
@@ -62,3 +114,5 @@ div.debug { /* remove debug to enable */
 .selected {
     background-color: #28242f;
 }
+
+
