--- a/data/assets/index.css
+++ b/data/assets/index.css
@@ -65,11 +65,7 @@ p  {
     font-size: 16px;
     color:#e3e2e6;
     text-align: center;
-    
 }
-
-
-
 
 .content>p {
     color: beige;
@@ -101,6 +97,10 @@ p  {
 .sideBar>a {
     text-decoration: none;
     padding-bottom: 12px;
+}
+
+a {
+    text-decoration: none;
 }
 
 .sideBar>a>.item>.label {
